Made 'Our creations' and the 'see all' button vertically aligned in the desktop view. Also some minor fixes.

--- a/style.css
+++ b/style.css
@@ -20,11 +20,6 @@ span {
     text-transform: uppercase
 }
 
-
-h2 {
-    font-size: 64px;
-}
-
 a,
 button,
 p {
@@ -248,7 +243,7 @@ header {
 
 @media (min-width: 1200px) {
     .overlapping_text h2 {
-        font-size: 60px;
+        font-size: 64px;
     }
 }
 
@@ -270,20 +265,22 @@ header {
 .our_creations_box {
     display: flex;
     justify-content: center;
+    margin-bottom: 6.5vh;
 }
 
 @media (min-width: 1200px) {
     .our_creations_box {
         display: flex;
         justify-content: space-between;
+        margin-bottom: 5vh;
     }
 }
 
 .our_creations_label {
-    width: max-content;
-    margin-bottom: 10%;
     margin-left: 0;
-    font-size: calc(8vw);
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 8vw;
     text-align: center;
 }
 
@@ -300,8 +297,8 @@ header {
         margin: 0 auto;
         margin-top: 5%;
         margin-bottom: 30%;
-        width: calc(50vw);
-        height: calc(12vw);
+        width: 50vw;
+        height: 12vw;
         letter-spacing: 5px;
         font-size: 24px;
         font-weight: 500;
@@ -324,14 +321,11 @@ header {
 
 @media (min-width: 1200px) {
     .see_all_button_desktop {
-        margin-left: auto;
         margin-right: 0;
-        margin-top: auto;
-        margin-bottom: 120px;
-        float: right;
         width: 200px;
         height: 40px;
         letter-spacing: 3px;
+        align-self: center;
     }
 }
 
